# BPC-PC1T-Projekt

./: .gitignore  CMakeLists.txt  README.md  main  main.c
files/: customer.txt  familyTariff.txt  tariff.txt
include/: customer.h  familyTariff.h  fileOP.h  main.h  tarif.h  tariff.h  util.h
src/: customer.c  familyTariff.c  familytarif.c  fileOP.c  main.c  tarif.c  tariff.c  util.c
